Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Flow</h1>
-        <p>FLOW programming language</p>
+        <p>Flow programming language</p>
 
         <p class="view"><a href="https://github.com/emerge/flow">View the Project on GitHub <small>emerge/flow</small></a></p>
 
@@ -28,9 +28,9 @@
         </ul>
       </header>
       <section>
-        <h1>FLOW</h1>
+        <h1>Flow</h1>
 
-<p>FLOW programming language</p>
+<p>flow programming language</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/emerge">emerge</a></p>
