--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -15,29 +16,29 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Flow</h1>
-        <p>Flow programming language</p>
-
-        <p class="view"><a href="https://github.com/emerge/flow">View the Project on GitHub <small>emerge/flow</small></a></p>
-
+        <h1 class="header">Flow</h1>
+        <p class="header">Flow programming language</p>
 
         <ul>
-          <li><a href="https://github.com/emerge/flow/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/emerge/flow/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/emerge/flow">View On <strong>GitHub</strong></a></li>
+          <li class="download"><a class="buttons" href="https://github.com/emerge/Flow/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/emerge/Flow/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/emerge/Flow">View On GitHub</a></li>
         </ul>
+
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/emerge">emerge</a></p>
+
+
       </header>
       <section>
         <h1>Flow</h1>
 
-<p>flow programming language</p>
+<p>Flow Programming Language</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/emerge">emerge</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
   </body>
 </html>
