--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <p class="header">Flow programming language</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/emerge/Flow/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/emerge/Flow/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/emerge/Flow">View On GitHub</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/emerge/flow/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/emerge/flow/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/emerge/flow">View On GitHub</a></li>
         </ul>
 
         <p class="header">This project is maintained by <a class="header name" href="https://github.com/emerge">emerge</a></p>
